--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2 class="section-title about-title">About</h2>
             <div class="about-content">
                 <div class="about-image-box">
-                    <img src="entethalaentephoto.jpg" alt="Tino Paul" class="about-image">
+                    <img src="tino.jpg" alt="Tino Paul" class="about-image">
                 </div>
                 <div class="about-text-box">
                     <p>Hello! I'm Tino Paul, a passionate Full Stack Developer and UI/UX Designer with over 5 years of experience creating digital solutions that make a difference. I specialize in building responsive web applications and designing intuitive user experiences that bridge the gap between functionality and aesthetics.</p>
